# faster-whisper-life-transcribing

./: README.md  main.py  pyproject.toml
decoder/: opus.py  pcm.py
transcribe/: model.py
transcribe/life/: recv_loop.py  send_loop.py  worker.py
ui/: index.html
ui/js/: main.js  pcm_websocket_processor.js
